aws_instances.dev_jump.tf
resource "aws_instance" "dev-jump" {
  availability_zone = "${var.region}a"
  key_name          = element(module.ssh-key.keys, 0)
  ami               = data.aws_ami.ubuntu.image_id
  instance_type     = var.instance_type

  root_block_device {
    volume_type           = "standard"
    volume_size           = 100
    delete_on_termination = false
  }

  user_data = <<DATA
apt-get update
apt-get install -y software-properties-common
apt-add-repository -y ppa:ansible/ansible
sudo apt-get -y install git
sudo apt-get update
sudo apt-get install -y ansible
git clone https://github.com/JamesWoolfenden/dse-deployer.git
DATA

  tags = var.common_tags

  security_groups = [aws_security_group.cassandra.name]
}
